--- a/Up lode.html
+++ b/Up lode.html
@@ -64,7 +64,7 @@
     <section class="movies container" id="movies">
         <!-- Heading -->
         <div class="heading">
-            <h1 class="heading-title">Uplode</h1>
+            <h1 class="heading-title">HELLO</h1>
         </div>
         <div class="upload-content">
             <div class="upload-area">
